ai-gateway-nim/resources/openai-5050-bak.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openai
  namespace: gloo-system
spec:
  parentRefs:
    - name: ai-gateway
      namespace: gloo-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /openai
    filters:
    - extensionRef:
        group: gateway.solo.io
        kind: RouteOption
        name: openai-route-policies
      type: ExtensionRef
  - backendRefs:
    - name: openai
      namespace: gloo-system
      group: gloo.solo.io
      kind: Upstream
#      weight: 100
#    - name: nim-llama3-1-8b
#      namespace: gloo-system
#      group: gloo.solo.io
#      kind: Upstream
#      weight: 0
